--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@huggingface/inference": "^4.7.1",
     "nanoid": "^5.1.5",
     "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0"
   },
