--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@huggingface/inference": "^4.7.1",
+    "clsx": "^2.1.1",
     "nanoid": "^5.1.5",
     "react": "^19.1.0",
     "react-confetti": "^6.4.0",
